--- a/SegFault/CMakeLists.txt
+++ b/SegFault/CMakeLists.txt
@@ -1,2 +1,14 @@
-add_library(SegFault STATIC src/Application.cpp  "src/EntryPoint.hpp"  "src/EntryPoint.cpp")
+include(FetchContent)
+FetchContent_Declare(glfw GIT_REPOSITORY https://github.com/glfw/glfw.git GIT_TAG master)
+FetchContent_Declare(glad GIT_REPOSITORY https://github.com/SasLuca/MyGlad.git GIT_TAG master)
+
+set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+
+FetchContent_MakeAvailable(glfw)
+FetchContent_MakeAvailable(glad)
+
+add_library(SegFault STATIC "src/Application.cpp" "src/EntryPoint.cpp" "src/Window.cpp")
 target_include_directories(SegFault PUBLIC src)
+target_link_libraries(SegFault PRIVATE glfw glad)
